--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '1', '1', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '1', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '1', '1', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '1', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '1', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
       "\n",
       "[[0, 0, 0, False], [0, 0, 1, False], [0, 0, 2, False], [0, 0, 3, False], [0, 0, 4, False], [0, 0, 5, False], [0, 0, 6, False], [0, 0, 7, False], [0, 0, 8, False], [0, 0, 9, False]]\n",
       "[[0, 1, 0, False], [0, 1, 1, False], [0, 1, 2, False], [0, 1, 3, False], [0, 1, 4, False], [0, 1, 5, False], [0, 1, 6, False], [0, 1, 7, False], [0, 1, 8, False], [0, 1, 9, False]]\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,23 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
-      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n"
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '1', '1', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '1', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '1', '1', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '1', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '1', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n"
      ]
     }
    ],
@@ -151,23 +151,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1 1 1 1 1 1 1 1 1 \n",
-      "1 2 2 2 2 2 2 2 2 2 \n",
-      "1 2 3 3 3 3 3 3 3 3 \n",
-      "1 2 3 4 4 4 4 4 4 4 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n"
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 1 1 0 0 0 0 0 0 0 \n",
+      "0 0 1 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 1 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 1 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n"
      ]
     }
    ],
@@ -180,23 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 0, 0, False], [1, 0, 1, False], [1, 0, 2, False], [1, 0, 3, False], [1, 0, 4, False], [1, 0, 5, False], [1, 0, 6, False], [1, 0, 7, False], [1, 0, 8, False], [1, 0, 9, False]]\n",
-      "[[1, 1, 0, False], [2, 1, 1, False], [2, 1, 2, False], [2, 1, 3, False], [2, 1, 4, False], [2, 1, 5, False], [2, 1, 6, False], [2, 1, 7, False], [2, 1, 8, False], [2, 1, 9, False]]\n",
-      "[[1, 2, 0, False], [2, 2, 1, False], [3, 2, 2, False], [3, 2, 3, False], [3, 2, 4, False], [3, 2, 5, False], [3, 2, 6, False], [3, 2, 7, False], [3, 2, 8, False], [3, 2, 9, False]]\n",
-      "[[1, 3, 0, False], [2, 3, 1, False], [3, 3, 2, False], [4, 3, 3, False], [4, 3, 4, False], [4, 3, 5, False], [4, 3, 6, False], [4, 3, 7, False], [4, 3, 8, False], [4, 3, 9, False]]\n",
-      "[[1, 4, 0, False], [2, 4, 1, False], [3, 4, 2, False], [4, 4, 3, False], [5, 4, 4, False], [5, 4, 5, False], [5, 4, 6, False], [5, 4, 7, False], [5, 4, 8, False], [5, 4, 9, False]]\n",
-      "[[1, 5, 0, False], [2, 5, 1, False], [3, 5, 2, False], [4, 5, 3, False], [5, 5, 4, False], [5, 5, 5, False], [5, 5, 6, False], [5, 5, 7, False], [5, 5, 8, False], [5, 5, 9, False]]\n",
-      "[[1, 6, 0, False], [2, 6, 1, False], [3, 6, 2, False], [4, 6, 3, False], [5, 6, 4, False], [5, 6, 5, False], [5, 6, 6, False], [5, 6, 7, False], [5, 6, 8, False], [5, 6, 9, False]]\n",
-      "[[1, 7, 0, False], [2, 7, 1, False], [3, 7, 2, False], [4, 7, 3, False], [5, 7, 4, False], [5, 7, 5, False], [5, 7, 6, False], [5, 7, 7, False], [5, 7, 8, False], [5, 7, 9, False]]\n",
-      "[[1, 8, 0, False], [2, 8, 1, False], [3, 8, 2, False], [4, 8, 3, False], [5, 8, 4, False], [5, 8, 5, False], [5, 8, 6, False], [5, 8, 7, False], [5, 8, 8, False], [5, 8, 9, False]]\n",
-      "[[1, 9, 0, False], [2, 9, 1, False], [3, 9, 2, False], [4, 9, 3, False], [5, 9, 4, False], [5, 9, 5, False], [5, 9, 6, False], [5, 9, 7, False], [5, 9, 8, False], [5, 9, 9, False]]\n"
+      "[[0, 0, 0, False], [0, 0, 1, False], [0, 0, 2, False], [0, 0, 3, False], [0, 0, 4, False], [0, 0, 5, False], [0, 0, 6, False], [0, 0, 7, False], [0, 0, 8, False], [0, 0, 9, False]]\n",
+      "[[0, 1, 0, False], [1, 1, 1, False], [1, 1, 2, False], [0, 1, 3, False], [0, 1, 4, False], [0, 1, 5, False], [0, 1, 6, False], [0, 1, 7, False], [0, 1, 8, False], [0, 1, 9, False]]\n",
+      "[[0, 2, 0, False], [0, 2, 1, False], [1, 2, 2, False], [0, 2, 3, False], [0, 2, 4, False], [0, 2, 5, False], [0, 2, 6, False], [0, 2, 7, False], [0, 2, 8, False], [0, 2, 9, False]]\n",
+      "[[0, 3, 0, False], [0, 3, 1, False], [0, 3, 2, False], [0, 3, 3, False], [1, 3, 4, False], [1, 3, 5, False], [0, 3, 6, False], [0, 3, 7, False], [0, 3, 8, False], [0, 3, 9, False]]\n",
+      "[[0, 4, 0, False], [0, 4, 1, False], [0, 4, 2, False], [0, 4, 3, False], [0, 4, 4, False], [1, 4, 5, False], [0, 4, 6, False], [0, 4, 7, False], [0, 4, 8, False], [0, 4, 9, False]]\n",
+      "[[0, 5, 0, False], [0, 5, 1, False], [0, 5, 2, False], [0, 5, 3, False], [0, 5, 4, False], [0, 5, 5, False], [0, 5, 6, False], [0, 5, 7, False], [0, 5, 8, False], [0, 5, 9, False]]\n",
+      "[[0, 6, 0, False], [0, 6, 1, False], [1, 6, 2, False], [0, 6, 3, False], [0, 6, 4, False], [0, 6, 5, False], [0, 6, 6, False], [0, 6, 7, False], [0, 6, 8, False], [0, 6, 9, False]]\n",
+      "[[0, 7, 0, False], [0, 7, 1, False], [0, 7, 2, False], [0, 7, 3, False], [0, 7, 4, False], [0, 7, 5, False], [0, 7, 6, False], [0, 7, 7, False], [0, 7, 8, False], [0, 7, 9, False]]\n",
+      "[[0, 8, 0, False], [0, 8, 1, False], [0, 8, 2, False], [0, 8, 3, False], [0, 8, 4, False], [0, 8, 5, False], [0, 8, 6, False], [0, 8, 7, False], [0, 8, 8, False], [0, 8, 9, False]]\n",
+      "[[0, 9, 0, False], [0, 9, 1, False], [0, 9, 2, False], [0, 9, 3, False], [0, 9, 4, False], [0, 9, 5, False], [0, 9, 6, False], [0, 9, 7, False], [0, 9, 8, False], [0, 9, 9, False]]\n"
      ]
     }
    ],
@@ -207,23 +207,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1 1 1 1 1 1 1 1 1 \n",
-      "1 2 2 2 2 2 2 2 2 2 \n",
-      "1 2 3 3 3 3 3 3 3 3 \n",
-      "1 2 3 4 4 4 4 4 4 4 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n"
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 1 1 0 0 0 0 0 0 0 \n",
+      "0 0 1 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 1 1 0 0 0 0 \n",
+      "0 0 0 0 0 1 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 1 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n"
      ]
     }
    ],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1017,9 +1017,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size : 1,  i-k : 1,  j-l : 1,  False\n",
+      "\n",
+      "sum : 1, i : 1,  j :1\n",
+      "size : 1,  i-k : 1,  j-l : 2,  False\n",
+      "\n",
+      "sum : 1, i : 1,  j :2\n",
+      "size : 1,  i-k : 2,  j-l : 2,  False\n",
+      "\n",
+      "sum : 1, i : 2,  j :2\n",
+      "size : 1,  i-k : 3,  j-l : 4,  False\n",
+      "\n",
+      "sum : 1, i : 3,  j :4\n",
+      "size : 1,  i-k : 3,  j-l : 5,  False\n",
+      "\n",
+      "sum : 1, i : 3,  j :5\n",
+      "size : 1,  i-k : 4,  j-l : 5,  False\n",
+      "\n",
+      "size : 1,  i-k : 6,  j-l : 2,  False\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "size = 5\n",
     "box_dict = {}\n",
@@ -1055,17 +1081,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
     "sum = 0\n",
-    "for i in range(len(dp_new)):\n",
-    "    for j in range(len(dp_new[i])):\n",
-    "        if dp_new[i][j][0] != 0:\n",
-    "            sum += 1\n",
+    "if any([x <= 5 for x in box_dict.values()]):\n",
+    "    for i in range(len(dp_new)):\n",
+    "        for j in range(len(dp_new[i])):\n",
+    "            if dp_new[i][j][0] != 0:\n",
+    "                sum += 1\n",
+    "else:\n",
+    "    sum = -1\n",
     "        \n",
     "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "any([x <= 5 for x in box_dict.values()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [2>4,4>4, 5>4,7>4]\n",
+    "any(x)"
    ]
   },
   {
@@ -1094,6 +1172,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_17136.ipynb Cell 20\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#X25sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m         dp[\u001b[39m0\u001b[39m][i][\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#X25sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m10\u001b[39m):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#X25sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39mif\u001b[39;00m arr[i][\u001b[39m0\u001b[39;49m] \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#X25sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m         dp[i][\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_17136.ipynb#X25sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39mlen\u001b[39m(arr[\u001b[39m0\u001b[39m])):\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "arr = [input().split() for _ in range(10)]\n",
     "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
