--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,9 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "\n",
+      "[[0, 0, 0, False], [0, 0, 1, False], [0, 0, 2, False], [0, 0, 3, False], [0, 0, 4, False], [0, 0, 5, False], [0, 0, 6, False], [0, 0, 7, False], [0, 0, 8, False], [0, 0, 9, False]]\n",
+      "[[0, 1, 0, False], [0, 1, 1, False], [0, 1, 2, False], [0, 1, 3, False], [0, 1, 4, False], [0, 1, 5, False], [0, 1, 6, False], [0, 1, 7, False], [0, 1, 8, False], [0, 1, 9, False]]\n",
+      "[[0, 2, 0, False], [0, 2, 1, False], [0, 2, 2, False], [0, 2, 3, False], [0, 2, 4, False], [0, 2, 5, False], [0, 2, 6, False], [0, 2, 7, False], [0, 2, 8, False], [0, 2, 9, False]]\n",
+      "[[0, 3, 0, False], [0, 3, 1, False], [0, 3, 2, False], [0, 3, 3, False], [0, 3, 4, False], [0, 3, 5, False], [0, 3, 6, False], [0, 3, 7, False], [0, 3, 8, False], [0, 3, 9, False]]\n",
+      "[[0, 4, 0, False], [0, 4, 1, False], [0, 4, 2, False], [0, 4, 3, False], [0, 4, 4, False], [0, 4, 5, False], [0, 4, 6, False], [0, 4, 7, False], [0, 4, 8, False], [0, 4, 9, False]]\n",
+      "[[0, 5, 0, False], [0, 5, 1, False], [0, 5, 2, False], [0, 5, 3, False], [0, 5, 4, False], [0, 5, 5, False], [0, 5, 6, False], [0, 5, 7, False], [0, 5, 8, False], [0, 5, 9, False]]\n",
+      "[[0, 6, 0, False], [0, 6, 1, False], [0, 6, 2, False], [0, 6, 3, False], [0, 6, 4, False], [0, 6, 5, False], [0, 6, 6, False], [0, 6, 7, False], [0, 6, 8, False], [0, 6, 9, False]]\n",
+      "[[0, 7, 0, False], [0, 7, 1, False], [0, 7, 2, False], [0, 7, 3, False], [0, 7, 4, False], [0, 7, 5, False], [0, 7, 6, False], [0, 7, 7, False], [0, 7, 8, False], [0, 7, 9, False]]\n",
+      "[[0, 8, 0, False], [0, 8, 1, False], [0, 8, 2, False], [0, 8, 3, False], [0, 8, 4, False], [0, 8, 5, False], [0, 8, 6, False], [0, 8, 7, False], [0, 8, 8, False], [0, 8, 9, False]]\n",
+      "[[0, 9, 0, False], [0, 9, 1, False], [0, 9, 2, False], [0, 9, 3, False], [0, 9, 4, False], [0, 9, 5, False], [0, 9, 6, False], [0, 9, 7, False], [0, 9, 8, False], [0, 9, 9, False]]\n"
+     ]
+    }
+   ],
    "source": [
     "input = open(\"data/boj_17136.txt\", \"r\").readline\n",
     "\n",
@@ -56,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,23 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '1', '1', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '1', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '1', '1', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '1', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '1', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n"
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n"
      ]
     }
    ],
@@ -123,23 +151,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 1 1 0 0 0 0 0 0 0 \n",
-      "0 0 1 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 1 1 0 0 0 0 \n",
-      "0 0 0 0 0 1 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 1 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n"
+      "1 1 1 1 1 1 1 1 1 1 \n",
+      "1 2 2 2 2 2 2 2 2 2 \n",
+      "1 2 3 3 3 3 3 3 3 3 \n",
+      "1 2 3 4 4 4 4 4 4 4 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n"
      ]
     }
    ],
@@ -152,23 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0, 0, False], [0, 0, 1, False], [0, 0, 2, False], [0, 0, 3, False], [0, 0, 4, False], [0, 0, 5, False], [0, 0, 6, False], [0, 0, 7, False], [0, 0, 8, False], [0, 0, 9, False]]\n",
-      "[[0, 1, 0, False], [1, 1, 1, False], [1, 1, 2, False], [0, 1, 3, False], [0, 1, 4, False], [0, 1, 5, False], [0, 1, 6, False], [0, 1, 7, False], [0, 1, 8, False], [0, 1, 9, False]]\n",
-      "[[0, 2, 0, False], [0, 2, 1, False], [1, 2, 2, False], [0, 2, 3, False], [0, 2, 4, False], [0, 2, 5, False], [0, 2, 6, False], [0, 2, 7, False], [0, 2, 8, False], [0, 2, 9, False]]\n",
-      "[[0, 3, 0, False], [0, 3, 1, False], [0, 3, 2, False], [0, 3, 3, False], [1, 3, 4, False], [1, 3, 5, False], [0, 3, 6, False], [0, 3, 7, False], [0, 3, 8, False], [0, 3, 9, False]]\n",
-      "[[0, 4, 0, False], [0, 4, 1, False], [0, 4, 2, False], [0, 4, 3, False], [0, 4, 4, False], [1, 4, 5, False], [0, 4, 6, False], [0, 4, 7, False], [0, 4, 8, False], [0, 4, 9, False]]\n",
-      "[[0, 5, 0, False], [0, 5, 1, False], [0, 5, 2, False], [0, 5, 3, False], [0, 5, 4, False], [0, 5, 5, False], [0, 5, 6, False], [0, 5, 7, False], [0, 5, 8, False], [0, 5, 9, False]]\n",
-      "[[0, 6, 0, False], [0, 6, 1, False], [1, 6, 2, False], [0, 6, 3, False], [0, 6, 4, False], [0, 6, 5, False], [0, 6, 6, False], [0, 6, 7, False], [0, 6, 8, False], [0, 6, 9, False]]\n",
-      "[[0, 7, 0, False], [0, 7, 1, False], [0, 7, 2, False], [0, 7, 3, False], [0, 7, 4, False], [0, 7, 5, False], [0, 7, 6, False], [0, 7, 7, False], [0, 7, 8, False], [0, 7, 9, False]]\n",
-      "[[0, 8, 0, False], [0, 8, 1, False], [0, 8, 2, False], [0, 8, 3, False], [0, 8, 4, False], [0, 8, 5, False], [0, 8, 6, False], [0, 8, 7, False], [0, 8, 8, False], [0, 8, 9, False]]\n",
-      "[[0, 9, 0, False], [0, 9, 1, False], [0, 9, 2, False], [0, 9, 3, False], [0, 9, 4, False], [0, 9, 5, False], [0, 9, 6, False], [0, 9, 7, False], [0, 9, 8, False], [0, 9, 9, False]]\n"
+      "[[1, 0, 0, False], [1, 0, 1, False], [1, 0, 2, False], [1, 0, 3, False], [1, 0, 4, False], [1, 0, 5, False], [1, 0, 6, False], [1, 0, 7, False], [1, 0, 8, False], [1, 0, 9, False]]\n",
+      "[[1, 1, 0, False], [2, 1, 1, False], [2, 1, 2, False], [2, 1, 3, False], [2, 1, 4, False], [2, 1, 5, False], [2, 1, 6, False], [2, 1, 7, False], [2, 1, 8, False], [2, 1, 9, False]]\n",
+      "[[1, 2, 0, False], [2, 2, 1, False], [3, 2, 2, False], [3, 2, 3, False], [3, 2, 4, False], [3, 2, 5, False], [3, 2, 6, False], [3, 2, 7, False], [3, 2, 8, False], [3, 2, 9, False]]\n",
+      "[[1, 3, 0, False], [2, 3, 1, False], [3, 3, 2, False], [4, 3, 3, False], [4, 3, 4, False], [4, 3, 5, False], [4, 3, 6, False], [4, 3, 7, False], [4, 3, 8, False], [4, 3, 9, False]]\n",
+      "[[1, 4, 0, False], [2, 4, 1, False], [3, 4, 2, False], [4, 4, 3, False], [5, 4, 4, False], [5, 4, 5, False], [5, 4, 6, False], [5, 4, 7, False], [5, 4, 8, False], [5, 4, 9, False]]\n",
+      "[[1, 5, 0, False], [2, 5, 1, False], [3, 5, 2, False], [4, 5, 3, False], [5, 5, 4, False], [5, 5, 5, False], [5, 5, 6, False], [5, 5, 7, False], [5, 5, 8, False], [5, 5, 9, False]]\n",
+      "[[1, 6, 0, False], [2, 6, 1, False], [3, 6, 2, False], [4, 6, 3, False], [5, 6, 4, False], [5, 6, 5, False], [5, 6, 6, False], [5, 6, 7, False], [5, 6, 8, False], [5, 6, 9, False]]\n",
+      "[[1, 7, 0, False], [2, 7, 1, False], [3, 7, 2, False], [4, 7, 3, False], [5, 7, 4, False], [5, 7, 5, False], [5, 7, 6, False], [5, 7, 7, False], [5, 7, 8, False], [5, 7, 9, False]]\n",
+      "[[1, 8, 0, False], [2, 8, 1, False], [3, 8, 2, False], [4, 8, 3, False], [5, 8, 4, False], [5, 8, 5, False], [5, 8, 6, False], [5, 8, 7, False], [5, 8, 8, False], [5, 8, 9, False]]\n",
+      "[[1, 9, 0, False], [2, 9, 1, False], [3, 9, 2, False], [4, 9, 3, False], [5, 9, 4, False], [5, 9, 5, False], [5, 9, 6, False], [5, 9, 7, False], [5, 9, 8, False], [5, 9, 9, False]]\n"
      ]
     }
    ],
@@ -179,23 +207,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 1 1 0 0 0 0 0 0 0 \n",
-      "0 0 1 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 1 1 0 0 0 0 \n",
-      "0 0 0 0 0 1 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 1 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n"
+      "1 1 1 1 1 1 1 1 1 1 \n",
+      "1 2 2 2 2 2 2 2 2 2 \n",
+      "1 2 3 3 3 3 3 3 3 3 \n",
+      "1 2 3 4 4 4 4 4 4 4 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n"
      ]
     }
    ],
@@ -208,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -235,6 +263,34 @@
     "        print(dp_new[i][j][3], end=\" \")\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -340,7 +396,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        print(dp_new[i][j][0], end=\" \")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
@@ -522,7 +583,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "size = 5\n",
+    "box_dict = {}\n",
+    "\n",
+    "while size >=1:\n",
+    "    for i in range(10):\n",
+    "        for j in range(len(dp[0])):\n",
+    "            sum = 0            \n",
+    "            if dp[i][j][0] == size:                \n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        if not dp[i-k][j-k][3]:\n",
+    "                            sum += 1 \n",
+    "                            #print(f\"size : {size},  i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
+    "                    #print()            \n",
+    "                               \n",
+    "            if sum == size ** 2:\n",
+    "                if size not in box_dict.keys():\n",
+    "                    box_dict[size] = 1\n",
+    "                else:\n",
+    "                    box_dict[size] += 1\n",
+    "                \n",
+    "                if box_dict[size] <= 5:                    \n",
+    "                    #print(f\"sum : {sum}, i : {i},  j :{j}\")                \n",
+    "                    for k in range(size-1, -1, -1):\n",
+    "                        for l in range(size-1, -1, -1):\n",
+    "                            dp[i-k][j-l][3] = True                            \n",
+    "                            if not(k==0 and l==0) :                      \n",
+    "                                dp[i-k][j-l][0] = 0              \n",
+    "                                        \n",
+    "    size -= 1            "
+   ]
   }
  ],
  "metadata": {
