--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{5: 1, 4: 1, 2: 1, 3: 1, 1: 1}\n",
-      "5\n"
+      "{1: 3, 4: 1, 3: 1, 5: 1}\n",
+      "6\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
     "print(box_dict)\n",
     "\n",
     "sum = 0\n",
-    "if any([x <= 5 for x in box_dict.values()]):\n",
+    "if all([x <= 5 for x in box_dict.values()]):\n",
     "    for i in range(len(dp)):\n",
     "        for j in range(len(dp[i])):\n",
     "            if dp[i][j][0] != 0:\n",
@@ -137,6 +137,84 @@
     "    for j in range(len(dp[0])):\n",
     "        print(dp[i][j][3], end=\" \")\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 3, 4: 1, 3: 1, 5: 1}\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = open(\"data/boj_17136.txt\", \"r\").readline\n",
+    "\n",
+    "arr = [input().split() for _ in range(10)]\n",
+    "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
+    "\n",
+    "for i in range(len(arr[0])):\n",
+    "    if arr[0][i] == \"1\":\n",
+    "        dp[0][i][0] = 1\n",
+    "        \n",
+    "for i in range(1, 10):\n",
+    "    if arr[i][0] == \"1\":\n",
+    "        dp[i][0][0] = 1\n",
+    "    for j in range(1, len(arr[0])):\n",
+    "        if arr[i][j] == \"1\":\n",
+    "            dp[i][j][0] = min(dp[i][j-1][0], dp[i-1][j][0], dp[i-1][j-1][0]) + 1\n",
+    "            if dp[i][j][0] >= 5:\n",
+    "                dp[i][j][0] = 5\n",
+    "                \n",
+    "size = 5\n",
+    "while size >=1:\n",
+    "    for i in range(10):\n",
+    "        for j in range(len(dp[0])):\n",
+    "            if dp[i][j][0] == size and not dp[i][j][3]:\n",
+    "                sum = 0\n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        if not dp[i-k][j-l][3] and dp[i-k][j-l][0] != 0:\n",
+    "                            sum += 1               \n",
+    "                \n",
+    "                if sum == size ** 2:\n",
+    "                    dp[i][j][3] = True                                             \n",
+    "                    for k in range(size-1, -1, -1):\n",
+    "                        for l in range(size-1, -1, -1):\n",
+    "                            if not(k==0 and l==0):\n",
+    "                                dp[i-k][j-l][0] = 0\n",
+    "                                dp[i-k][j-l][3] = True\n",
+    "                else:\n",
+    "                    dp[i][j][0] -= 1                        \n",
+    "    size -= 1\n",
+    "\n",
+    "box_dict = {}\n",
+    "for i in range(10):\n",
+    "    for j in range(len(dp[0])):\n",
+    "        if dp[i][j][0] > 0:\n",
+    "            if dp[i][j][0] not in box_dict.keys():\n",
+    "                box_dict[dp[i][j][0]] = 1\n",
+    "            else:\n",
+    "                box_dict[dp[i][j][0]] += 1\n",
+    "print(box_dict)\n",
+    "\n",
+    "total = 0\n",
+    "if all([x <= 5 for x in box_dict.values()]):\n",
+    "    for i in range(len(dp)):\n",
+    "        for j in range(len(dp[i])):\n",
+    "            if dp[i][j][0] != 0:\n",
+    "                total += 1\n",
+    "elif len(box_dict) == 0:\n",
+    "    total = 0\n",
+    "elif any([x > 5 for x in box_dict.values()]):\n",
+    "    total = -1 \n",
+    "print(total)"
    ]
   }
  ],
