--- a/boj_1213.ipynb
+++ b/boj_1213.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "size : 9\n",
-      "AABCGCBAA\n"
+      "size : 5\n",
+      "AABBA\n"
      ]
     }
    ],
@@ -22,7 +22,7 @@
     "for ch in input():  # ABACABA\n",
     "    heapq.heappush(pq, ch)\n",
     "    \n",
-    "print(f\"size : {len(pq)}\")\n",
+    "#print(f\"size : {len(pq)}\")\n",
     "\n",
     "front_list, rear_list = [], []\n",
     "\n",
@@ -41,7 +41,7 @@
     "        print(\"I'm Sorry Hansoo\")\n",
     "        \n",
     "else:\n",
-    "    if front_list[:-1] == rear_list:\n",
+    "    if front_list[:-1] == rear_list or front_list[1:] == rear_list:\n",
     "        print(\"\".join(front_list + sorted(rear_list, reverse=True)))\n",
     "    else:\n",
     "        print(\"I'm Sorry Hansoo\")\n",
@@ -50,20 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['A', 'A', 'B', 'C', 'G']\n",
-      "['A', 'A', 'B', 'C']\n"
+      "['A', 'A', 'B']\n",
+      "['A', 'B']\n"
      ]
     }
    ],
    "source": [
-    "# ABACABACG\n",
+    "# AAABB\n",
     "print(front_list)\n",
     "print(rear_list)"
    ]
