--- a/boj_1213.ipynb
+++ b/boj_1213.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "size : 5\n",
       "AABBA\n"
      ]
     }
@@ -50,7 +49,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABABA\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "pq = []\n",
+    "\n",
+    "for ch in input():  # ABACABA\n",
+    "    heapq.heappush(pq, ch)\n",
+    "    \n",
+    "#print(f\"size : {len(pq)}\")\n",
+    "\n",
+    "front_list, rear_list = [], []\n",
+    "\n",
+    "for i in range(len(pq)):\n",
+    "    if i % 2 == 0:\n",
+    "        #print(f\"첫번째 i : {i}\")\n",
+    "        front_list.append(heapq.heappop(pq))\n",
+    "    else:\n",
+    "        #print(f\"두번째 i : {i}\")\n",
+    "        rear_list.append(heapq.heappop(pq))\n",
+    "        \n",
+    "if len(front_list) == len(rear_list):\n",
+    "    if front_list == rear_list:\n",
+    "        print(\"\".join(front_list + sorted(rear_list, reverse=True)))\n",
+    "    else:\n",
+    "        print(\"I'm Sorry Hansoo\")\n",
+    "        \n",
+    "else:\n",
+    "    if front_list[1:] == rear_list:\n",
+    "        print(\"\".join(front_list[1:] + [front_list[0]] + sorted(rear_list, reverse=True)))\n",
+    "        \n",
+    "    elif front_list[:-1] == rear_list:\n",
+    "        print(\"\".join(front_list + sorted(rear_list, reverse=True)))\n",
+    "    \n",
+    "    else:\n",
+    "        print(\"I'm Sorry Hansoo\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -64,6 +114,7 @@
    ],
    "source": [
     "# AAABB\n",
+    "# ABABA\n",
     "print(front_list)\n",
     "print(rear_list)"
    ]
