--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -308,6 +308,80 @@
     "            backtracking(y, x+1)\n",
     "            mark(y, x, sz, 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "backtracking(0, 0)\n",
+    "print(-1 if ans == 25 else ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "board = [list(map(int, input().split())) for _ in range(10)]\n",
+    "ans = 25 \n",
+    "paper = [0] * 6\n",
+    "\n",
+    "def is_possible(y, x, sz):\n",
+    "    if paper[sz] == 5:\n",
+    "        return False\n",
+    "    \n",
+    "    if y + sz > 10 or x + sz > 10:\n",
+    "        return False\n",
+    "    for i in range(sz):\n",
+    "        for j in range(sz):\n",
+    "            if board[y+i][x+j] == 0:\n",
+    "                return False\n",
+    "    return True   \n",
+    "\n",
+    "def mark(y, x, sz, v):\n",
+    "    for i in range(sz):\n",
+    "        for j in range(sz):\n",
+    "            board[y+i][x+j] = v\n",
+    "    if v:  # 1인데 원상복구의 의미(색종이를 떼어낸 것이다)\n",
+    "        paper[sz] -= 1\n",
+    "    else:  # 0인데 색종이를 붙여다는 의미\n",
+    "        paper[sz] += 1  \n",
+    "        \n",
+    "def backtracking(y, x):\n",
+    "    global ans\n",
+    "    \n",
+    "    if y == 10:\n",
+    "        ans = min(ans, sum(paper))\n",
+    "        return\n",
+    "    \n",
+    "    if x == 10:\n",
+    "        backtracking(y+1, 0)\n",
+    "        return\n",
+    "    \n",
+    "    if board[y][x] == 0:\n",
+    "        backtracking(y, x+1)\n",
+    "        return\n",
+    "    \n",
+    "    for sz in range(1, 6):\n",
+    "        if is_possible(y, x, sz):\n",
+    "            mark(y, x, sz, 0)\n",
+    "            backtracking(y, x+1)\n",
+    "            mark(y, x, sz, 1)    \n",
+    "            \n",
+    "backtracking(0, 0)\n",
+    "print(-1 if ans == 25 else ans)"
+   ]
   }
  ],
  "metadata": {
