--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -329,10 +329,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "input = open(\"data/boj_17136.txt\").readline\n",
+    "\n",
     "board = [list(map(int, input().split())) for _ in range(10)]\n",
     "ans = 25 \n",
     "paper = [0] * 6\n",
@@ -343,6 +354,7 @@
     "    \n",
     "    if y + sz > 10 or x + sz > 10:\n",
     "        return False\n",
+    "    \n",
     "    for i in range(sz):\n",
     "        for j in range(sz):\n",
     "            if board[y+i][x+j] == 0:\n",
